# ocrolus-api-skill-v2

./: .gitignore  FINDINGS.md  README.md  SKILL.md  ocrolus_client.py
docs/: ocrolus-api-official-openapi3.yaml  ocrolus-api-openapi3.json  ocrolus-api-openapi3.yaml  ocrolus-api-swagger2.json
examples/: widget_app.py
ocrolus_automations/: .gitignore  README.md  pyproject.toml
ocrolus_automations/src/ocrolus_automations/: __init__.py  __main__.py  cli.py  config.py  gui.py  log_config.py
ocrolus_automations/src/ocrolus_automations/automations/: __init__.py  bulk_upload.py  move_book.py
ocrolus_automations/src/ocrolus_automations/clients/: __init__.py  ocrolus_client.py
ocrolus_automations/src/ocrolus_automations/utils/: __init__.py  env_store.py  http.py  streams.py
ocrolus_automations/tests/: conftest.py  test_bulk_upload.py  test_redaction.py  test_streams.py
references/: coverage-matrix.md  detect.md  endpoint-audit.csv  endpoints.md  webhooks.md
scripts/: generate_openapi.py  health_check.py  ocrolus_client.py  test_fixtures.py  validate_endpoints.py  webhook_setup.py  webhook_verifier.py
tools/: FINDINGS.md  README.md  health_check.py
tools/maintenance/: generate_openapi.py
